--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNElResentPlayCCell.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNElResentPlayCCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="152" height="175"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gamepic-1" translatesAutoresizingMaskIntoConstraints="NO" id="PHo-XB-qj2">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="PHo-XB-qj2">
                         <rect key="frame" x="0.0" y="0.0" width="152" height="85"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="PHo-XB-qj2" secondAttribute="height" multiplier="165:92" id="6xm-A0-gPs"/>
@@ -42,6 +42,7 @@
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
             <constraints>
                 <constraint firstItem="A7R-UP-YPu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="99O-WA-bQc"/>
                 <constraint firstItem="A7R-UP-YPu" firstAttribute="top" secondItem="PHo-XB-qj2" secondAttribute="bottom" constant="10" id="9cQ-bL-Ydo"/>
@@ -51,7 +52,6 @@
                 <constraint firstItem="PHo-XB-qj2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YqR-3d-Nzn"/>
                 <constraint firstAttribute="trailing" secondItem="PHo-XB-qj2" secondAttribute="trailing" id="hOV-eq-3Bd"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
             <size key="customSize" width="152" height="175"/>
             <connections>
                 <outlet property="icon" destination="PHo-XB-qj2" id="9Xx-sV-nHT"/>
@@ -62,6 +62,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="gamepic-1" width="165" height="92"/>
+        <image name="1" width="150" height="84"/>
     </resources>
 </document>
